fix buttons style, hoistory, social links, spacing and gallery arrows

--- a/components/Buttons/Button.module.css
+++ b/components/Buttons/Button.module.css
@@ -15,6 +15,8 @@
   overflow: hidden;
   outline: none;
   background: transparent;
+  text-transform: inherit;
+  font-weight: inherit;
 }
 
 .button a {
