--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -15,7 +15,7 @@
   top: 0;
   left: 0;
   background-color: black;
-  opacity: 0.6;
+  opacity: 0.5;
   width: 100%;
   height: 100%;
 }
@@ -33,8 +33,25 @@
   display: inline-block;
 }
 
+.title {
+  font-size: 38px;
+}
+
+.subtitle {
+  font-size: 1.4em;
+  font-weight: 500;
+}
+
 @media (min-width: 768px) {
   .container {
     margin-top: 20px;
+  }
+
+  .title {
+    font-size: 44px;
+  }
+
+  .subtitle {
+    font-size: 1.6em;
   }
 }
